--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,17 +6,275 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>1176</width>
+    <height>667</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget"/>
-  <widget class="QMenuBar" name="menubar"/>
+  <widget class="QMenuBar" name="menubar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>1176</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionNew_File"/>
+    <addaction name="actionOpen_File"/>
+    <addaction name="actionSave_File"/>
+   </widget>
+   <widget class="QMenu" name="menuSelect">
+    <property name="title">
+     <string>Select</string>
+    </property>
+    <addaction name="actionPoint_Select"/>
+    <addaction name="actionRectangle_Select"/>
+   </widget>
+   <widget class="QMenu" name="menuEdit">
+    <property name="title">
+     <string>Edit</string>
+    </property>
+    <addaction name="actionAdd_Pad"/>
+    <addaction name="actionAdd_Line"/>
+    <addaction name="actionDelete_Feature"/>
+    <addaction name="actionUndo"/>
+    <addaction name="actionRedo"/>
+   </widget>
+   <widget class="QMenu" name="menuLayer">
+    <property name="title">
+     <string>Layer</string>
+    </property>
+    <addaction name="actionAdd_Layer"/>
+   </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <addaction name="actionZoom_In"/>
+    <addaction name="actionZoom_Out"/>
+   </widget>
+   <widget class="QMenu" name="menuJob">
+    <property name="title">
+     <string>Job</string>
+    </property>
+    <addaction name="actionChange_Job_Name"/>
+   </widget>
+   <addaction name="menuFile"/>
+   <addaction name="menuSelect"/>
+   <addaction name="menuEdit"/>
+   <addaction name="menuLayer"/>
+   <addaction name="menuView"/>
+   <addaction name="menuJob"/>
+  </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionNew_File"/>
+   <addaction name="actionOpen_File"/>
+   <addaction name="actionSave_File"/>
+   <addaction name="actionZoom_In"/>
+   <addaction name="actionZoom_Out"/>
+   <addaction name="actionPoint_Select"/>
+   <addaction name="actionRectangle_Select"/>
+   <addaction name="actionUndo"/>
+   <addaction name="actionRedo"/>
+  </widget>
+  <widget class="QDockWidget" name="dockWidget">
+   <property name="windowTitle">
+    <string>Layer Bar</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>1</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents">
+    <layout class="QGridLayout" name="gridLayout">
+     <item row="2" column="0">
+      <widget class="QLabel" name="currentCommand">
+       <property name="text">
+        <string>Command</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QTableView" name="tableView"/>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="currentStep">
+       <property name="text">
+        <string>Step</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <widget class="QDockWidget" name="dockWidget_2">
+   <property name="windowTitle">
+    <string>Feature Bar</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>2</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents_2">
+    <layout class="QGridLayout" name="gridLayout_2">
+     <item row="0" column="0">
+      <widget class="QTableView" name="tableView_2"/>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="curMousePosition_label">
+       <property name="text">
+        <string>TextLabel</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <action name="actionNew_File">
+   <property name="icon">
+    <iconset resource="Images.qrc">
+     <normaloff>:/New File.png</normaloff>:/New File.png</iconset>
+   </property>
+   <property name="text">
+    <string>New File</string>
+   </property>
+  </action>
+  <action name="actionOpen_File">
+   <property name="icon">
+    <iconset resource="Images.qrc">
+     <normaloff>:/Open File.png</normaloff>:/Open File.png</iconset>
+   </property>
+   <property name="text">
+    <string>Open File</string>
+   </property>
+  </action>
+  <action name="actionSave_File">
+   <property name="icon">
+    <iconset resource="Images.qrc">
+     <normaloff>:/Save File.png</normaloff>:/Save File.png</iconset>
+   </property>
+   <property name="text">
+    <string>Save File</string>
+   </property>
+  </action>
+  <action name="actionPoint_Select">
+   <property name="icon">
+    <iconset resource="Images.qrc">
+     <normaloff>:/point select.png</normaloff>:/point select.png</iconset>
+   </property>
+   <property name="text">
+    <string>Point Select</string>
+   </property>
+  </action>
+  <action name="actionRectangle_Select">
+   <property name="icon">
+    <iconset resource="Images.qrc">
+     <normaloff>:/rectangle select.png</normaloff>:/rectangle select.png</iconset>
+   </property>
+   <property name="text">
+    <string>Rectangle Select</string>
+   </property>
+  </action>
+  <action name="actionAdd_Pad">
+   <property name="icon">
+    <iconset resource="Images.qrc">
+     <normaloff>:/pad.png</normaloff>:/pad.png</iconset>
+   </property>
+   <property name="text">
+    <string>Add Pad</string>
+   </property>
+  </action>
+  <action name="actionAdd_Line">
+   <property name="icon">
+    <iconset resource="Images.qrc">
+     <normaloff>:/line.png</normaloff>:/line.png</iconset>
+   </property>
+   <property name="text">
+    <string>Add Line</string>
+   </property>
+  </action>
+  <action name="actionDelete_Feature">
+   <property name="icon">
+    <iconset resource="Images.qrc">
+     <normaloff>:/Feature Delete.png</normaloff>:/Feature Delete.png</iconset>
+   </property>
+   <property name="text">
+    <string>Delete Feature</string>
+   </property>
+  </action>
+  <action name="actionUndo">
+   <property name="icon">
+    <iconset resource="Images.qrc">
+     <normaloff>:/Undo.png</normaloff>:/Undo.png</iconset>
+   </property>
+   <property name="text">
+    <string>Undo</string>
+   </property>
+  </action>
+  <action name="actionRedo">
+   <property name="icon">
+    <iconset resource="Images.qrc">
+     <normaloff>:/Redo.png</normaloff>:/Redo.png</iconset>
+   </property>
+   <property name="text">
+    <string>Redo</string>
+   </property>
+  </action>
+  <action name="actionAdd_Layer">
+   <property name="icon">
+    <iconset resource="Images.qrc">
+     <normaloff>:/add Layer.png</normaloff>:/add Layer.png</iconset>
+   </property>
+   <property name="text">
+    <string>Add Layer</string>
+   </property>
+  </action>
+  <action name="actionZoom_In">
+   <property name="icon">
+    <iconset resource="Images.qrc">
+     <normaloff>:/Zoom In.png</normaloff>:/Zoom In.png</iconset>
+   </property>
+   <property name="text">
+    <string>Zoom In</string>
+   </property>
+  </action>
+  <action name="actionZoom_Out">
+   <property name="icon">
+    <iconset resource="Images.qrc">
+     <normaloff>:/Zoom Out.png</normaloff>:/Zoom Out.png</iconset>
+   </property>
+   <property name="text">
+    <string>Zoom Out</string>
+   </property>
+  </action>
+  <action name="actionChange_Job_Name">
+   <property name="icon">
+    <iconset resource="Images.qrc">
+     <normaloff>:/change JobName.png</normaloff>:/change JobName.png</iconset>
+   </property>
+   <property name="text">
+    <string>Change Job Name</string>
+   </property>
+  </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="Images.qrc"/>
+ </resources>
  <connections/>
 </ui>
