단축키 추가

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -223,6 +223,9 @@
    <property name="text">
     <string>Delete Feature</string>
    </property>
+   <property name="shortcut">
+    <string>Del</string>
+   </property>
   </action>
   <action name="actionUndo">
    <property name="icon">
@@ -232,6 +235,9 @@
    <property name="text">
     <string>Undo</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+Z</string>
+   </property>
   </action>
   <action name="actionRedo">
    <property name="icon">
@@ -240,6 +246,9 @@
    </property>
    <property name="text">
     <string>Redo</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+Z</string>
    </property>
   </action>
   <action name="actionAdd_Layer">
